src/tests/fixtures/comments/blockCommentThreeStars.invalid.ts.expected
-----------------
INPUT
----------------- 
/*** @gqlType */
class User {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/blockCommentThreeStars.invalid.ts:1:6 - error: Unexpected Grats tag in detached docblock. Grats was unable to determine which TypeScript declaration this docblock is associated with. Moving the docblock to a position with is unambiguously "above" the relevant declaration may help.

1 /*** @gqlType */
       ~~~~~~~~
